--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.32.2
-opencv-python==4.9.0.80
-face-recognition==1.3.0
-numpy==1.24.4
-scikit-learn==1.3.0
-imutils==0.5.4
-cmake>=3.22.0  # Required for dlib
-dlib==19.24.2  # Ensure compatibility with face-recognition
+streamlit
+opencv-python
+face-recognition
+numpy
+scikit-learn
+imutils
+cmake
+dlib
